Add success pop-up window; Add defoult angular

--- a/app/views/pizzas/show.html.erb
+++ b/app/views/pizzas/show.html.erb
@@ -1,6 +1,14 @@
 <div class="main_content">
   <div class="row" id="pizza_top">
     <div class="col-md-4">
+
+
+
+<div class="alert alert-success">Pizza was successfully commissioned!</div>
+   
+
+
+   
       <%= image_tag @pizza.image.url(:medium), class: "pizza_image" %>
     </div>
     <div class="col-md-8">
