Add js pop-up windows

--- a/app/assets/stylesheets/pizzas.scss
+++ b/app/assets/stylesheets/pizzas.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the pizzas controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.modal-header, h4{
+    text-align: center;
+}
+th, .cost{
+    text-align: center;
+}
+.plus{
+    color: #02FF05;
+}
+.name{
+    color: #332519E6;
+}
