--- a/app/views/pizzas/show.html.erb
+++ b/app/views/pizzas/show.html.erb
@@ -1,15 +1,8 @@
 <div class="main_content">
   <div class="row" id="pizza_top">
     <div class="col-md-4">
-
-
-
-<div class="alert alert-success">Pizza was successfully commissioned!</div>
-   
-
-
-   
-      <%= image_tag @pizza.image.url(:medium), class: "pizza_image" %>
+      <div class="alert alert-success">Pizza was successfully commissioned!</div>
+         <%= image_tag @pizza.image.url(:medium), class: "pizza_image" %>
     </div>
     <div class="col-md-8">
       <div id="pizza_info">
@@ -19,6 +12,11 @@
         <p class="description">
           <%= @pizza.description %>
         </p>
+        <%= link_to "Info", info_index_path, class: "btn btn-default" %>
+        <%= render 'info' %>
+        <%= render 'info2' %>
+
+        
       </div>
     </div>
   </div>
@@ -29,12 +27,12 @@
         <ul>
           <% @pizza.ingredients.each do |ingredient| %>
             <li>
-            name:
-              <%= ingredient.name %>
-              price:
-              <%= ingredient.price %>
-              vendor number:
-              <%= ingredient.vendor_number %>
+              name:
+                <%= ingredient.name %>
+                price:
+                <%= ingredient.price %>
+                vendor number:
+                <%= ingredient.vendor_number %>
             </li>
           <% end %>
         </ul>
