--- a/app/views/pizzas/show.html.erb
+++ b/app/views/pizzas/show.html.erb
@@ -1,9 +1,8 @@
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+
      <script src="smart_deals_app.js"></script>
  <div class="main_content">
   <div class="row" id="pizza_top">
     <div class="col-md-4">
-<%array = Array.new()%>
 <div class="alert alert-success">Pizza was successfully commissioned!</div>
    
 
@@ -40,15 +39,19 @@
               <%= ingredient.vendor_number %>
             </li>
             <% tranzaction = create_tranzaction(ingredient.name,ingredient.vendor_number,ingredient.price)%>
-            <%array.push(tranzaction)%>            
+            <%@array.push(tranzaction)%>     
           <% end %>
         </ul>
       </div>
     </div>
   </div>
+
     <div>
       {{test}}
+      {{web3}}
     </div>
+
+
   <div class="row">
     <div class="col-md-12">
       <%= link_to "Back", root_path, class: "btn btn-default" %>
