--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -23,7 +23,7 @@
                    <tbody> 
                        <tr> 
                             <th scope="row">1</th>
-                            <td class="name">Cheese</td> 
+                            <td class="name"><%=@array1[0]["name"]%></td> 
                             <td class="weight"> <span class="plus">+57 </span>gr</td> 
                             <td align="center">
                             <span class="plus">+27 </span>pizz
