--- a/app/views/pizzas/_form.html.erb
+++ b/app/views/pizzas/_form.html.erb
@@ -22,14 +22,18 @@
   <div class="row">
       <div class="col-md-6">
         <h3>Ingredients</h3>
+        
         <div id="ingredients">
-          <%= f.simple_fields_for :ingredients do |ingredient| %>
+          
+          <%= f.fields_for :ingredients do |ingredient| %>
             <%= render 'ingredient_fields', f: ingredient %>
           <% end %>
+          
           <div class="links">
             <%= link_to_add_association 'Add Ingredient', f, :ingredients, class: "btn btn-default add-button" %>
           </div>
         </div>
+      
       </div>
     </div>
   </div>
